crud operations added

--- a/passenger-management-service/src/main/resources/application.properties
+++ b/passenger-management-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port = 8081
+
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/online_railway_reservation
+spring.datasource.username = orr
+spring.datasource.password = orr
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
 
