--- a/passenger-management-service/src/main/resources/application.properties
+++ b/passenger-management-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port = 8081
+spring.application.name=passenger-managemenet-service
+server.port = 8082
 
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/online_railway_reservation
@@ -7,4 +8,3 @@ spring.datasource.password = orr
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
-
