--- a/passenger-management-service/src/main/resources/application.properties
+++ b/passenger-management-service/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-spring.application.name=passenger-managemenet-service
-server.port = 8082
+spring.application.name=passenger-management-service
+server.port=8082
 
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/online_railway_reservation
-spring.datasource.username = orr
-spring.datasource.password = orr
-
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=passengerdb
