--- a/passenger-management-service/pom.xml
+++ b/passenger-management-service/pom.xml
@@ -37,6 +37,10 @@
 			<version>1.6.9</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
