--- a/passenger-management-service/src/main/resources/application.properties
+++ b/passenger-management-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=8082
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=passengerdb
+
+spring.security.user.name=passenger
+spring.security.user.password=passenger
