--- a/passenger-management-service/src/main/resources/application.properties
+++ b/passenger-management-service/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=passengerdb
 
-spring.security.user.name=passenger
-spring.security.user.password=passenger
+#spring.security.user.name=passenger
+#spring.security.user.password=passenger
