--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,4 +18,9 @@ spring:
          http://localhost:8082/
         predicates:
         - Path=/passenger/find/** , /passenger/all, /passenger/update, /passenger/delete/**, /passenger/add, /passenger/login, /passenger/bylocation/**, /passenger/byusername/**, /passenger/byphone/**
+      - id : ADMIN-MANAGEMENT-SERVICE
+        uri:
+         http://localhost:8081/
+        predicates:
+        - Path=/admin/find/** , /admin/all, /admin/update, /admin/delete/**, /admin/add, /admin/login, /admin/bylocation/**, /admin/byusername/**, /admin/byphone/**
         
