pnr microservice added

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -38,4 +38,9 @@ spring:
          http://localhost:8085/
         predicates:
         - Path=/fare/**
+      - id : PNR-MANAGEMENT-SERVICE
+        uri:
+         http://localhost:8086/
+        predicates:
+        - Path=/pnr/**
         
