--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,15 +1,12 @@
 server:
   port: 9000
- 
-eureka:
- client:
-   service-url:
-    defaultZone: http://localhost:8761/eureka/
     
 spring:
   application:
     name: api_gateway
-
+    
+  main:
+    web-application-type: reactive
 
   cloud:
     gateway:
@@ -74,9 +71,17 @@ spring:
             args:
               name: PNR-MANAGEMENET-SERVICE
               fallbackuri: forward:/pnr/fallback
-  main:
-    web-application-type: reactive
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
+    
+                  
 hystrix:
   command:
     fallbackcmd:
