--- a/ticket-management-service/src/main/resources/application.properties
+++ b/ticket-management-service/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=8084
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=ticketdb
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
